src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AB2__ABPassword__c</fullName>
        <label>ABPassword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ABUsername__c</fullName>
        <description>Inactive. AdBook credentials are now stored in custom settings.</description>
        <label>ABUsername</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Associations__c</fullName>
        <label>Associations</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BiographyUrl__c</fullName>
        <inlineHelpText>URL to biography page on Metrostudy.com</inlineHelpText>
        <label>Biography Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <description>Biography for website, etc.</description>
        <label>Biography</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blog__c</fullName>
        <inlineHelpText>URL of blog</inlineHelpText>
        <label>Blog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bypass_Workflows__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This Bypasses the workflows</inlineHelpText>
        <label>Bypass Workflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HW_DFP_User_ID__c</fullName>
        <externalId>true</externalId>
        <label>HW DFP User ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ImageUrl__c</fullName>
        <inlineHelpText>URL of biography image on Metrostudy server</inlineHelpText>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <description>URL of Linkedin site</description>
        <inlineHelpText>URL of Linkedin site</inlineHelpText>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MetrostudyIncludeOnWebsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include On Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetrostudyLeadership__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box to include employee on the Leadership page on Metrostudy.com</inlineHelpText>
        <label>Metrostudy Leadership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetrostudySpeakersBureau__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box to include employee on the Speakers Bureau page on Metrostudy.com</inlineHelpText>
        <label>Metrostudy Speakers Bureau</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetrostudyWebsiteOrder__c</fullName>
        <description>Order a user will appear on the website.  This applies to every page the user could be on - Leadership, Speakers page and Local Reps</description>
        <inlineHelpText>Display order on Metrostudy.com; Should be assigned by title:  President=1,  SVP=3, VP=5, RDs=10, DBDs=15, Member Advisors= 20, Senior Advisors=25, Senior Consultants = 30, Consultants=35</inlineHelpText>
        <label>Metrostudy Website Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guided Selling</fullName>
                    <default>true</default>
                    <label>Guided Selling</label>
                </value>
                <value>
                    <fullName>Search Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiagnosticToolEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable to run pricing diagnostics during a Quote Line Editor Calculate.</description>
        <inlineHelpText>Use to enable CPQ Diagnostic Tool, only available if org setting is enabled. Contact support to enable this capability.</inlineHelpText>
        <label>Enable Diagnostic Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Followed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <label>Sales Territory</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Central/BPM Sales</fullName>
                </value>
                <value>
                    <fullName>Central/SoCal</fullName>
                </value>
                <value>
                    <fullName>Central Florida</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Executive Staff</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>MD-Northern VA</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Northern-Central CA/Nevada</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phoenix/Tucson/Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Raleigh</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southern CA</fullName>
                </value>
                <value>
                    <fullName>South Florida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryEmail__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <description>Signature</description>
        <label>Signature</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SubjectMatterExpertise__c</fullName>
        <inlineHelpText>For Speakers bureau</inlineHelpText>
        <label>Subject Matter Expertise</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Real Estate Equity</fullName>
                </value>
                <value>
                    <fullName>Residential Construction</fullName>
                </value>
                <value>
                    <fullName>Residential Remodeling</fullName>
                </value>
                <value>
                    <fullName>Lands and Lots</fullName>
                </value>
                <value>
                    <fullName>Lending / Investing Landscape</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Local Economy</fullName>
                </value>
                <value>
                    <fullName>Regional Economy</fullName>
                </value>
                <value>
                    <fullName>National Economy</fullName>
                </value>
                <value>
                    <fullName>Local Market Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TollFreePhone__c</fullName>
        <label>Toll Free Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TwitterHandle__c</fullName>
        <inlineHelpText>Twitter @username
example: @metrostudycorp</inlineHelpText>
        <label>Twitter Handle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideWebsiteAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box to prevent address from being displayed on website</inlineHelpText>
        <label>Hide Address on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideWebsiteMobilePhone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box to prevent mobile phone number from being displayed on the public website</inlineHelpText>
        <label>Hide Mobile on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_ID_Full__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2014_Budget_Classified__c</fullName>
        <label>2014 Budget - Classified</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Budget_Digital__c</fullName>
        <label>2014 Budget - Digital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Budget_Print__c</fullName>
        <label>2014 Budget - Print</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Budget__c</fullName>
        <label>2014 Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box so that others in this Salesforce organization can send Adobe Sign agreements on behalf of this user.</description>
        <label>Adobe Sign Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in Adobe Sign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</inlineHelpText>
        <label>Adobe Sign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__InsideSales_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user is an admin of the InsideSales system.</description>
        <label>InsideSales Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_subdomain__c</fullName>
        <label>InsideSales Subdomain</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_token__c</fullName>
        <label>InsideSales Authorization Token</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__password__c</fullName>
        <label>InsideSales Password</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__permissions__c</fullName>
        <label>InsideSales Permissions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qbdialer__username__c</fullName>
        <label>InsideSales Username</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharem__FolderizeState__c</fullName>
        <description>this field stores description of Folderize state for the user</description>
        <label>FolderizeState</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__AllowMapAnythingExports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow MapAnything Exports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__DefaultProximityRadius__c</fullName>
        <label>Default Proximity Radius</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__EditMapAnythingOrgWirdeQueries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit MapAnything Org Wide Queries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MABetaTester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MapAnything Beta Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultLatitude__c</fullName>
        <label>MapAnything Default Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultLongitude__c</fullName>
        <label>MapAnything Default Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultType__c</fullName>
        <label>MADefaultType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultZoomLevel__c</fullName>
        <label>MapAnything Default Zoom Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAMaxExportSize__c</fullName>
        <label>MapAnything Max Export Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAMaxQuerySize__c</fullName>
        <label>MapAnything Max Query Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAVersion__c</fullName>
        <label>MapAnything Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__MapAnythingSettings__c</fullName>
        <label>Map Anything Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__PreferredTypeOfMeasurement__c</fullName>
        <label>Preferred Type of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Km</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Yards</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__ReceiveBatchExceptionEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Batch Exception Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__TestUserLookup__c</fullName>
        <description>For blueline bug.</description>
        <label>TestUserLookup</label>
        <relationshipName>TestChildLookup</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Chatter_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Chatter Free User</value>
        </filters>
        <label>Active Chatter Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Marketing_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>marketing</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Marketing Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Media_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>Media</value>
        </filters>
        <label>Media Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Metrostudy_Users</fullName>
        <booleanFilter>(1 AND 2 AND (3 OR 4))</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Metro</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.NAME</field>
            <operation>equals</operation>
            <value>Blake Ealey</value>
        </filters>
        <label>Metrostudy Active Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Metrostudy_Users_Sales</fullName>
        <booleanFilter>1 and 2 and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Metro,system</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Sale</value>
        </filters>
        <label>Metrostudy Active Sales User</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Templeton</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>tdemo</value>
        </filters>
        <label>Templeton</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>